--- a/ex026/mq005/index.html
+++ b/ex026/mq005/index.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <span id="burguer"   class="material-symbols-outlined" onclick="clickmenu()">
+            menu
+        </span>
+
+        <menu id="itens">
+            
             <ul>
                 <li>
                     <a href="#">
@@ -39,5 +47,30 @@
             </ul>
         </menu>
     </header>
+
+    <main>
+        <article>
+            <h2>Testando Media Query</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptates quisquam doloremque ducimus vero neque commodi debitis error non. Obcaecati in, illo temporibus quasi quis numquam blanditiis aliquam fuga expedita! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam ipsa accusamus inventore perspiciatis illum tenetur numquam eos quis dicta doloremque, optio libero illo voluptatibus, omnis nihil veniam cupiditate. Deleniti, quos!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptates quisquam doloremque ducimus vero neque commodi debitis error non. Obcaecati in, illo temporibus quasi quis numquam blanditiis aliquam fuga expedita! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam ipsa accusamus inventore perspiciatis illum tenetur numquam eos quis dicta doloremque, optio libero illo voluptatibus, omnis nihil veniam cupiditate. Deleniti, quos!</p>
+        </article>
+    </main>
+    <script>
+        function mudouTamanho(){
+            if(window.innerWidth >= 768){
+                itens.style.display = 'block'
+            } else{
+                itens.style.display = 'none'
+            }
+            }
+        
+        function clickmenu(){
+            if(itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else{
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
