Inicio do projeto MUSEU NACIONAL

--- a/exercicios-udemy/flexbox_container.html
+++ b/exercicios-udemy/flexbox_container.html
@@ -44,11 +44,11 @@
             margin: 10px;
         }
         .item1{
-            /*flex-grow: 1;*/
+            flex-grow: 1;
             /*flex-shrink: 1;*/
         }
         .item2{
-            /*flex-grow: 2;*/
+            flex-grow: 2;
             /*flex-shrink: 7;*/
         }
         /*.ordem{
